--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -194,7 +194,8 @@ $bg_content: #E9E9E9
 // style
 
 body
-  font-family: 'Trebuchet MS', Verdana, Arial, Helvetica, sans-serif
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif
+  letter-spacing: .5px
 
 h1
   display: none
@@ -250,13 +251,13 @@ a:hover
     display: block
   a
     color: #222
-    text-shadow: 1px 2px 0px #FFF
+    /*text-shadow: 1px 2px 0px #FFF*/
   a:hover
     color: #000
-    text-shadow: 0px -1px 1px #ddd
+    /*text-shadow: 0px -1px 1px #ddd*/
 
 #content p
-  text-shadow: 1px 2px 0px #FFF
+  /*text-shadow: 1px 2px 0px #FFF*/
   margin-bottom: 12px
   text-align: left
 
@@ -378,7 +379,7 @@ a#profile_name
     height: 19px
   .news, .eventi, .lavoro
     margin: 0 0 10px
-    text-shadow: 2px 2px 2px #FFF
+    /*text-shadow: 2px 2px 2px #FFF*/
   h5 span
     display: block
     text-align: left
