instagram social icon

--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -76,4 +76,5 @@
       = link_to image_tag("icons/vimeo_icon.png"), "http://vimeo.com/user5798268"
       = link_to image_tag("icons/flickr_icon.png"), "http://www.flickr.com/photos/accademiacappiello/"
       = link_to image_tag("icons/twitter_icon.png"), "http://twitter.com/Acc_Cappiello"
+      = link_to image_tag("icons/instagram_icon.png"), "http://instagram.com/accademiacappiello"
 
