change page 63 layout
layout pagina 63 come le altre dei corsi

--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -18,7 +18,7 @@
       <fb:like-box href="http://www.facebook.com/pages/Accademia-dArte-e-Design-Leonetto-Cappiello-Firenze/124282164308467" width="492" show_faces="false" stream="true" header="false"></fb:like-box>
 
 - # borse di studio, form
-- ids_full_class = [6, 8, 13, 10, 29, 7, 5, 4, 30, 51, 58, 61]
+- ids_full_class = [6, 8, 13, 10, 29, 7, 5, 4, 30, 51, 58, 61, 63]
 #inner{ class: "#{"home" if home_page? || @page.id == 1} #{"full" if !@page.root? || ids_full_class.include?(@page.id)}" }
   - if @page.id == 1 || @page.id == 35 # news
     = render partial: "elements/home"
