--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -67,7 +67,7 @@
             = link_to tf("Info", "info"), js_void
 
         - else
-          - unless page.id == 35 # news
+          - unless page.id == 35 || page.id == 63 # news
             %li
               = link_to tr(page).title, pag_path(page)
 
