interessi workshop moda

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -25,6 +25,8 @@
       = f.label     :int_master_visual,    "#{tf "GRAPHIC DESIGN - Master", "GRAPHIC DESIGN - Master"}"
       = f.check_box :int_master_interior
       = f.label     :int_master_interior,  "INTERIOR DESIGN - #{tf "Master", "Master"}"
+      = f.check_box :int_workshop_moda
+      = f.label     :int_workshop_moda,    "#{tf "Workshop foto/video di moda", "Fashion foto/video workshop"}"
       = f.check_box :int_evening
       = f.label     :int_evening,    "#{tf "Corsi Serali", "Evening Classes"}"
       = f.check_box :int_brevi_visual
