interessi workshop moda

--- a/app/views/users/_user_infos.html.haml
+++ b/app/views/users/_user_infos.html.haml
@@ -8,7 +8,7 @@
   - show_selection :int_annuali_web, "Corso annuale Digital Communication"
   - show_selection :int_master_visual, "Master Graphic Design"
   - show_selection :int_master_interior, "Master Interior Design"
-  - show_selection :int_workshop, "Workshop"
+  - show_selection :int_workshop_moda, "Workshop foto/video di Moda"
   - show_selection :int_evening, "Corsi Serali"
   - show_selection :int_evening_visual, "Corsi serali Grafica Pubblicitaria"
   - show_selection :int_evening_interior, "Corsi serali Interior Design"
@@ -19,7 +19,7 @@
 
   - show_selection :int_stage_visual, "Open Day Grafica Pubblicitaria"
   - show_selection :int_stage_interior, "Open Day Interior Design"
-  - show_selection :int_workshop_moda, "Workshop"
+  - show_selection :int_workshop_moda, "Workshop Foto/Video di Moda"
   - show_selection :int_stage_web, "Open Day Digital Communication"
   - show_selection :int_stage_evening, "Open Day Corsi Serali"
   
