--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -10,10 +10,10 @@
         - when "annual_courses"
           %li
             %ul.subnav
-              %li= link_to tf("Grafica Pubblicitaria", "Graphic Design"), page_path(id: tf("grafica_pubblicitaria_corsi_annuali", "graphic_design_annual_training"))
+              %li= link_to tf("Grafica Pubblicitaria e Comunicazione", "Graphic Design and Communication"), page_path(id: tf("grafica_pubblicitaria_corsi_annuali", "graphic_design_annual_training"))
               %li= link_to "Interior Design", page_path(id: tf("interior_design_corsi_annuali", "interior_design_annual_training"))
               %li= link_to "Digital Communication", page_path(id: tf("digital_communication_design_annuale", "web_communication_design"))
-            = link_to tf("Corsi Annuali", "Annual Courses"), js_void
+            = link_to tf("Corsi 9/15 mesi", "Annual Courses"), js_void
         - when "master_courses"
           %li
             %ul.subnav
