New Master Integrated Media

--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -17,7 +17,7 @@
         - when "master_courses"
           %li
             %ul.subnav
-              %li= link_to "Graphic Design", page_path(id: tf("visual_design_corso_master", "visual_design_master_course"))
+              %li= link_to "Integrated Media", page_path(id: tf("visual_design_corso_master", "visual_design_master_course"))
               %li= link_to "Interior Design", page_path(id: tf("interior_design_corso_master", "interior_design_master_course"))
             = link_to tf("Master", "Master"), js_void
 
