--- a/app/views/forms/_borse_di_studio.html.haml
+++ b/app/views/forms/_borse_di_studio.html.haml
@@ -41,24 +41,24 @@
       = f.label :job, tf("Attuale occupazione", "Current employment")
       = f.text_field :job
 
-      -# = f.label :cv, tf("Curriculum Vitae (obbligatorio, in formato PDF)", "CV (required, PDF file format)")
-      -# = f.file_field :cv
-      -# %p.tit
-      -#   - if @user.cv?
-      -#     %a{ href: @user.cv_url }= @user.cv_url
-      -#     
-      -# = f.label :portfolio, tf("Portfolio lavori (facoltativo, in formato PDF)", "Works portfolio (optional, PDF file format)")
-      -# = f.file_field :portfolio
-      -# %p.tit
-      -#   - if @user.portfolio?
-      -#     %a{ href: @user.portfolio_url }= @user.portfolio_url
-      -# 
-      -# = f.label :user_image, tf("Lavoro - Autoritratto (obbligatorio, formato JPG o PDF)", "Work - Self-portait (required, PDF or JPG)")
-      -# = f.file_field :user_image
-      -# 
-      -# %p.tit
-      -#   - if @user.user_image?
-      -#     %a{ href: @user.user_image_url }= @user.user_image_url
+      = f.label :cv, tf("Curriculum Vitae (obbligatorio, in formato PDF)", "CV (required, PDF file format)")
+      = f.file_field :cv
+      %p.tit
+        - if @user.cv?
+          %a{ href: @user.cv_url }= @user.cv_url
+
+      = f.label :portfolio, tf("Portfolio lavori (facoltativo, in formato PDF)", "Works portfolio (optional, PDF file format)")
+      = f.file_field :portfolio
+      %p.tit
+        - if @user.portfolio?
+          %a{ href: @user.portfolio_url }= @user.portfolio_url
+
+      = f.label :user_image, tf("Lavoro - Autoritratto (obbligatorio, formato JPG o PDF)", "Work - Self-portait (required, PDF or JPG)")
+      = f.file_field :user_image
+
+      %p.tit
+        - if @user.user_image?
+          %a{ href: @user.user_image_url }= @user.user_image_url
 
     .second
       - infos = ["Altri titoli di studio/corsi di specializzazione frequentati", "Esperienze (anche amatoriali) nel campo specifico del corso prescelto", "Esperienze di lavoro maturate", "Cosa mi spinge a compiere studi in questo ambito", "Altre Info. utili, idonee a valutare il mio interesse a partecipare al corso"] # Sono in grado di esibire lavori da me svolti attinenti al corso prescelto
