--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -20,7 +20,7 @@
       = f.check_box :int_annuali_interior
       = f.label     :int_annuali_interior,  "INTERIOR DESIGN - #{tf "Corso Annuale", "1 Year Course"}"
       = f.check_box :int_annuali_web
-      = f.label     :int_annuali_web,  "DIGITAL COMMIUNICATION"
+      = f.label     :int_annuali_web,  "DIGITAL COMMUNICATION"
       = f.check_box :int_master_visual
       = f.label     :int_master_visual,    "#{tf "GRAPHIC DESIGN - Master", "GRAPHIC DESIGN - Master"}"
       = f.check_box :int_master_interior
