--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -40,7 +40,7 @@
       = f.check_box :int_stage_interior
       = f.label     :int_stage_interior,  "#{tf "OPEN DAY", "OPEN DAY"} INTERIOR DESIGN"
       = f.check_box :int_stage_web
-      = f.label     :int_stage_web,  "#{tf "OPEN DAY", "OPEN DAY"} DIGITAL COMMIUNICATION"
+      = f.label     :int_stage_web,  "#{tf "OPEN DAY", "OPEN DAY"} DIGITAL COMMUNICATION"
       = f.check_box :int_stage_evening
       = f.label     :int_stage_evening,  "#{tf "OPEN DAY CORSI SERALI", "OPEN DAY EVENING CLASSES"}"
 
