--- a/new_site/stylesheets/style.css
+++ b/new_site/stylesheets/style.css
@@ -32,6 +32,7 @@ small, small *{
   margin: 0 2% 1% 0;
   width:50%;
   max-width:300px;
+  min-width: 200px;
 }
 .top-menu-social a{
   margin-right:18px;
