--- a/new_site/stylesheets/style.css
+++ b/new_site/stylesheets/style.css
@@ -45,9 +45,9 @@ small, small *{
   color:white;
 }
 .header-menu a{
-  font-size:15px;
+  font-size:14.5px;
   padding:7px 9px;
-  margin-right:.5%;
+  margin-right:1%;
   color:rgba(0,0,0, .5);
 }
 .header-menu a:hover{
