--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -90,6 +90,8 @@
               %i.fa.fa-pinterest
             %a{:href => "http://vimeo.com/user5798268", :target => "_blank"}
               %i.fa.fa-vimeo
+            .separator3
+            .separator1
           .col5.push-right
             .desktop
               .separator5
