--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -73,6 +73,10 @@ small {
 .color-primary {
   color: #d32b59; }
 
+/*Utils */
+.separator1 {
+  min-height: 1px; }
+
 /*Layout */
 .line-max {
   max-width: 1000px;
