--- a/public/stylesheets/sass/main_responsive.sass
+++ b/public/stylesheets/sass/main_responsive.sass
@@ -124,3 +124,22 @@ small
     width: 100%
     padding: 0 0 0 0
     float: none
+
+
+// mad rox
+
+// #photos
+//   display: none // oops
+
+.article #photos
+  box-sizing: border-box
+  margin-top: 20px
+  img
+    margin: 1%
+    float: left
+    // width: 14.5%
+    width: 14.5%
+    min-width: 50px
+
+.flickr_button
+  display: none
