--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -140,7 +140,7 @@
           .separator10
           %a.btn.btn-small.bg-muted.color-white Contatti
           .separator15
-          %a.btn.btn-smal.color-white.bg-primary Area utenti
+          %a.btn.btn-small.color-white.bg-primary Area utenti
         .separator15
         %a.color-white{:href => "#"}
           %i.fa.fa-phone
@@ -196,7 +196,7 @@
       / end social nav
       / header and menu
       .line.bg-white
-        .separator30
+        .separator15
         .line-compress.line-max.header
           .col2.line-tablet.center-content-tablet
             %a{:href => "/"}
