pinterest to flickr

--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -168,7 +168,7 @@
             %a{:href => "http://instagram.com/accademiacappiello", :target => "_blank"}
               %i.fa.fa-instagram
             %a{:href => "http://www.flickr.com/photos/accademiacappiello/", :target => "_blank"}
-              %i.fa.fa-pinterest
+              %i.fa.fa-flickr
             %a{:href => "http://vimeo.com/user5798268", :target => "_blank"}
               %i.fa.fa-vimeo
             .separator3
